<resources>
    <string name="app_name">Beholder</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_add_character">Create new character</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="nav_character_level">Level: %1$s</string>
    <string name="nav_character_experience">Experience: %1$s</string>
    <string name="nav_character_hp">Hp: %1$s/%2$s</string>
    <string name="action_register">Register</string>
    <string name="action_dialog_sure_to_logout">Are you sure you want to logout?</string>
    <string name="action_logout">Logout</string>
    <string name="label_modifier_short">Mod.</string>
    <string name="label_passive_check_short">P. Check</string>

    <string-array name="dice_arrays">
        <item>D20</item>
        <item>D4</item>
        <item>D6</item>
        <item>86</item>
        <item>D10</item>
        <item>D12</item>
        <item>D100</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
